add more required field
